--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -7,8 +7,8 @@
     <form name="quizName" novalidate flex="50">
         <md-input-container class="md-icon-right">
             <input @*class="form-control"*@ name="name" @*ng-disabled="q.quizNameDisabled && q.quizData.name"*@ type="text"
-                                            placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"
-                                            @*ng-model-options="{ updateOn: 'blur', debounce: {  blur: 0 } }" ng-blur="q.quizNameDisabled = true"*@/>
+                   placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"
+                   @*ng-model-options="{ updateOn: 'blur', debounce: {  blur: 0 } }" ng-blur="q.quizNameDisabled = true"*@ />
             @*<button type="button" ng-click="q.quizNameDisabled = false">*@<md-icon md-svg-icon="t:edit"></md-icon>@*</button>*@
             @*<div class="error-message" ng-messages="quizName.name.$error" ng-show="quizName.name.$touched">
                     <div ng-message="required">@GeneralResources.RequiredField</div>
@@ -25,19 +25,28 @@
         <div flex="50">back</div>
     </div>
     <ol ui-on-drop="true">
-        <li id="drag{{$index}}"  ui-on-drop="f.move($data,card)" layout="row" ng-repeat="card in f.data.cards">
+        <li id="drag{{$index}}" ui-on-drop="f.move($data,card)" layout="row" ng-repeat="card in f.data.cards">
             <button type="button" drag="{{$index}}" ui-draggable="true" drag-image-element-id="'drag' + $index">move</button>
             <button type="button" ng-click="f.add($index)">add</button>
-            <card-form flex="50" slide="card.front"></card-form>
-            <card-form flex="50" slide="card.cover"></card-form>
+            <card-form flex="50" slide="card.front" upload="f.upload"></card-form>
+            <card-form flex="50" slide="card.cover" upload="f.upload"></card-form>
         </li>
         <li ng-click="f.add()">add</li>
-       
+
     </ol>
 </div>
 <script type="text/ng-template" id="card-form.html">
+    
+   a {{f.data.name}}
+    @*<img ng-src="{{slide.img}}" />*@
     <md-input-container class="md-icon-right">
-        <textarea ng-model="slide.text">a</textarea>
-        <md-icon md-svg-icon="t:edit"></md-icon>
+        <textarea ng-model="slide.text"></textarea>
+        <img ng-src="{{slide.img}}" />
+        <md-icon md-svg-icon="t:edit" plupload="upload.url"
+                 plupload-options="upload.options(slide)"
+                 plupload-callbacks="upload.callbacks"></md-icon>
     </md-input-container>
+
+
+
 </script>
