--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -41,16 +41,65 @@
             }
         }
 
-        card-form {
-            .md-resize-wrapper {
-                min-height: 60px;
-                border: 1px solid #b7b7b7;
-                background: @textColorWhite;
-                .displayFlex;
-                .align-items(center);
+        .card-container {
+            .displayFlex;
+            .align-items(stretch);
+            position: relative;
 
-                textarea {
-                    border: none;
+            card-form {
+                .displayFlex;
+
+                md-input-container {
+                    border: 1px solid #b7b7b7;
+                    background: @textColorWhite;
+                    margin: 7px 0;
+
+                    .md-errors-spacer {
+                        display: none;
+                    }
+
+                    &.md-input-focused md-icon {
+                        display: block;
+                    }
+
+                    md-icon {
+                        display: none;
+                        width: 23px;
+                        height: 19px;
+                        margin-right: 4px;
+                    }
+                }
+
+                .md-resize-wrapper {
+                    min-height: 60px;
+                    .displayFlex;
+                    .align-items(center);
+
+                    textarea {
+                        border: none;
+                    }
+                }
+            }
+
+            .drag-btn {
+                position: absolute;
+                left: -26px;
+                top: ~"calc(50% - 10px)";
+
+                md-icon {
+                    width: 14px;
+                    height: 14px;
+                }
+            }
+
+            .add-btn {
+                position: absolute;
+                bottom: -10px;
+                left: -28px;
+
+                md-icon {
+                    width: 19px;
+                    height: 19px;
                 }
             }
         }
