--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -28,11 +28,11 @@
             <div flex="50">back</div>
         </div>
         <ol ui-on-drop="true">
-            <li id="drag{{$index}}" ui-on-drop="f.move($data,card)" layout="row" ng-repeat="card in f.data.cards">
-                <button type="button" drag="{{$index}}" ui-draggable="true" drag-image-element-id="'drag' + $index">move</button>
-                <button type="button" ng-click="f.add($index)">add</button>
+            <li id="drag{{$index}}" class="card-container" ui-on-drop="f.move($data,card)" layout="row" ng-repeat="card in f.data.cards">
                 <card-form flex="50" slide="card.front"></card-form>
                 <card-form flex="50" slide="card.cover"></card-form>
+                <button type="button" class="drag-btn" drag="{{$index}}" ui-draggable="true" drag-image-element-id="'drag' + $index"><md-icon md-svg-icon="t:headerMenu"></md-icon></button>
+                <button type="button" class="add-btn" ng-click="f.add($index)"><md-icon md-svg-icon="t:add"></md-icon></button>
             </li>
             <li ng-click="f.add()">add</li>
 
@@ -42,6 +42,6 @@
 <script type="text/ng-template" id="card-form.html">
     <md-input-container class="md-icon-right">
         <textarea ng-model="slide.text">a</textarea>
-        <md-icon md-svg-icon="t:edit"></md-icon>
+        <md-icon md-svg-icon="b:image-icon"></md-icon>
     </md-input-container>
 </script>
