--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -19,7 +19,7 @@
         <button type="button" ng-click="f.create()" class="action-btn">Create</button>
     </div>
     <div class="flashcard-body">
-        <div layout="row" layout-align="space-between center">
+        <div layout="row" layout-align="space-between center" class="header">
 
             <div flex="50">front</div>
             <md-button type="button" ng-click="f.flip()" class="flip-btn">
@@ -29,24 +29,28 @@
         </div>
         <ol ui-on-drop="true">
             <li id="drag{{$index}}" class="card-container" ui-on-drop="f.move($data,card)" layout="row" ng-repeat="card in f.data.cards">
-            <card-form flex="50" slide="card.front" upload="f.upload"></card-form>
-            <card-form flex="50" slide="card.cover" upload="f.upload"></card-form>
+                <card-form flex="50" slide="card.front" upload="f.upload"></card-form>
+                <card-form flex="50" slide="card.cover" upload="f.upload"></card-form>
                 <button type="button" class="drag-btn" drag="{{$index}}" ui-draggable="true" drag-image-element-id="'drag' + $index"><md-icon md-svg-icon="t:headerMenu"></md-icon></button>
                 <button type="button" class="add-btn" ng-click="f.add($index)"><md-icon md-svg-icon="t:add"></md-icon></button>
             </li>
-            <li ng-click="f.add()">add</li>
+            <li layout="row" class="add-card" ng-click="f.add()">
+                <div flex="50">
+                    <md-icon md-svg-icon="t:add"></md-icon>
+                </div>
+                <div flex="50"></div>
+            </li>
 
         </ol>
     </div>
 </div>
 <script type="text/ng-template" id="card-form.html">
-    
-   a {{f.data.name}}
+
+    {{f.data.name}}
     @*<img ng-src="{{slide.img}}" />*@
     <md-input-container class="md-icon-right">
         <textarea ng-model="slide.text"></textarea>
-        <md-icon md-svg-icon="b:image-icon"></md-icon>
-        <md-icon md-svg-icon="t:edit" plupload="upload.url"
+        <md-icon md-svg-icon="b:image-icon" plupload="upload.url"
                  plupload-options="upload.options(slide)"
                  plupload-callbacks="upload.callbacks"></md-icon>
     </md-input-container>
