Upload in flashcard complete.

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -63,7 +63,7 @@
                     }
 
                     md-icon {
-                        display: none;
+                       // display: none;
                         width: 23px;
                         height: 19px;
                         margin-right: 4px;
