added remove button on flashcard

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -11,8 +11,8 @@
 
         form {
             //color: @textColorWhite;
-            max-width: 800px;
-            padding-top: 10px;
+            max-width: 860px;
+            padding: 10px 30px 0 30px;
 
             md-input-container {
                 margin-bottom: 0;
@@ -76,7 +76,7 @@
                     }
 
                     md-icon {
-                       // display: none;
+                        // display: none;
                         width: 23px;
                         height: 19px;
                         margin-right: 4px;
@@ -113,6 +113,18 @@
                 md-icon {
                     width: 19px;
                     height: 19px;
+                }
+            }
+
+            .remove-btn {
+                position: absolute;
+                right: -30px;
+                top: 0;
+                bottom: 0;
+
+                md-icon {
+                    width: 15px;
+                    height: 15px;
                 }
             }
         }
