Change to files.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -7,13 +7,8 @@
     <div layout="row" layout-align="space-between center" class="flashcard-top">
         <form name="quizName" novalidate flex="50">
             <md-input-container flex="50">
-                <input @*class="form-control"*@ name="name" @*ng-disabled="q.quizNameDisabled && q.quizData.name"*@ type="text"
-                       placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"
-                       @*ng-model-options="{ updateOn: 'blur', debounce: {  blur: 0 } }" ng-blur="q.quizNameDisabled = true"*@ />
-                @*<button type="button" ng-click="q.quizNameDisabled = false">*@@*</button>*@
-                @*<div class="error-message" ng-messages="quizName.name.$error" ng-show="quizName.name.$touched">
-                        <div ng-message="required">@GeneralResources.RequiredField</div>
-                    </div>*@
+                <input name="name" type="text"
+                       placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"/>
             </md-input-container>
         </form>
         <button type="button" ng-click="f.create()" class="action-btn">Create</button>
