--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
@@ -1,13 +1,14 @@
 ﻿.flashcard .content {
-  max-width: 800px;
+  max-width: 860px;
+  padding: 10px 30px 0 30px;
   margin: 0 auto;
 }
 .flashcard .flashcard-top {
   margin-top: 95px;
 }
 .flashcard .flashcard-top form {
-  max-width: 860px;
-  padding: 10px 30px 0 30px;
+  max-width: 800px;
+  padding-top: 10px;
 }
 .flashcard .flashcard-top form md-input-container {
   margin-bottom: 0;
