--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -2,7 +2,8 @@
 
 .flashcard {
     .content {
-        max-width: 800px;
+        max-width: 860px;
+        padding: 10px 30px 0 30px;
         margin: 0 auto;
     }
 
@@ -11,8 +12,8 @@
 
         form {
             //color: @textColorWhite;
-            max-width: 860px;
-            padding: 10px 30px 0 30px;
+            max-width: 800px;
+            padding-top: 10px;
 
             md-input-container {
                 margin-bottom: 0;
