--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -93,6 +93,40 @@
                         border: none;
                     }
                 }
+
+                .image-container {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+
+                    md-progress-circular {
+                        position: absolute;
+                        top: 4px;
+                        right: 4px;
+                        stroke: @buttonColorBlue;
+                    }
+
+                    img {
+                        max-width: 58px;
+                        max-height: 58px;
+                    }
+
+                    .remove-img {
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                        text-align: center;
+                        line-height: 0;
+                        padding: 6px;
+                        z-index: 1;
+
+                        md-icon {
+                            margin: 0;
+                            width: 10px;
+                            height: 10px;
+                        }
+                    }
+                }
             }
 
             .drag-btn {
