--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -3,18 +3,13 @@
     <div flex class="text-center text-capitalize">Create a Flashcard</div>
     <button flex="none" type="button" ng-click="f.close($event)" class="close" ga-track-event="['createFlashcard', 'close']"><md-icon md-svg-icon="t:close"></md-icon></button>
 </header>
-<div class="content" interaction-done>
+<form name="f.form" class="content" interaction-done>
     <div layout="row" layout-align="space-between center" class="flashcard-top">
         <md-input-container flex="50">
-            <input @*class="form-control"*@ name="name" @*ng-disabled="q.quizNameDisabled && q.quizData.name"*@ type="text"
-                   placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"
-                   @*ng-model-options="{ updateOn: 'blur', debounce: {  blur: 0 } }" ng-blur="q.quizNameDisabled = true"*@ />
-            @*<button type="button" ng-click="q.quizNameDisabled = false">*@@*</button>*@
-            @*<div class="error-message" ng-messages="quizName.name.$error" ng-show="quizName.name.$touched">
-                    <div ng-message="required">@GeneralResources.RequiredField</div>
-                </div>*@
+            <input name="name" type="text"
+                   placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"/>
         </md-input-container>
-        <button type="button" ng-click="f.create()" class="action-btn">Create</button>
+        <button type="button" ng-click="f.publish()" class="action-btn">Create</button>
     </div>
     <div class="flashcard-body">
         <div layout="row" layout-align="space-between center" class="header">
@@ -42,7 +37,7 @@
 
         </ol>
     </div>
-</div>
+</form>
 <script type="text/ng-template" id="card-form.html">
     <md-input-container class="md-icon-right">
         <textarea ng-model="slide.text"></textarea>
@@ -52,7 +47,7 @@
         <div class="image-container">
             <md-progress-circular ng-if="slide.uploadProgress" md-mode="determinate" md-diameter="50" value="{{slide.uploadProgress}}"></md-progress-circular>
             <img width="100" height="100" ng-src="{{slide.image}}" ng-if="slide.image" />
-            <button type="button" class="remove-img" ng-click="" ng-if="slide.image"><md-icon md-svg-icon="t:close"></md-icon></button>
+            <button type="button" class="remove-img" ng-click="upload.removeImage(slide)" ng-if="slide.image"><md-icon md-svg-icon="t:close"></md-icon></button>
         </div>
     </md-input-container>
 </script>
